# ansible-github

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  galaxy.yml  pyproject.toml
.github/workflows/: galaxy-cd.yml  preflight.yaml  release.yaml
plugins/module_utils/: endpoint.py  ghutil.py  manager.py  mixin.py  runner.py
plugins/modules/: branch.py  collaborator.py  file.py  label.py  repository.py  secrets.py
roles/preflight/files/: pre-commit.yaml
