[tool.poetry]
name = "ansible-github"
version = "0.0.0"
description = "Ansible collection for working with Github."
authors = ["jheddings <jheddings@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plugins/modules"}]
repository = "https://github.com/jheddings/ansible-github"

[tool.poetry.dependencies]
python = "^3.12.0"
ansible = "^8.6.0"
pygithub = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"
known_third_party = "github"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
